--- a/DotnetTemplate/AngularApp/package.json
+++ b/DotnetTemplate/AngularApp/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "angular-template",
+  "name": "angular-app",
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
@@ -22,18 +22,23 @@
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
     "@progress/kendo-angular-buttons": "^3.0.3",
+    "@progress/kendo-angular-charts": "^2.0.2",
     "@progress/kendo-angular-dateinputs": "^2.1.1",
     "@progress/kendo-angular-dropdowns": "^2.0.2",
     "@progress/kendo-angular-excel-export": "^1.0.6",
+    "@progress/kendo-angular-gauges": "^1.0.3",
     "@progress/kendo-angular-grid": "^2.1.0",
     "@progress/kendo-angular-inputs": "^2.1.1",
     "@progress/kendo-angular-intl": "^1.3.1",
     "@progress/kendo-angular-l10n": "^1.0.6",
-    "@progress/kendo-angular-scrollview": "^1.0.8",
     "@progress/kendo-data-query": "^1.2.0",
     "@progress/kendo-drawing": "^1.5.1",
-    "@telerik/kendo-theme-default": "^1.33.4",
+    "@progress/kendo-theme-default": "^2.48.1",
+    "bootstrap": "^4.0.0-beta.2",
     "core-js": "^2.4.1",
+    "hammerjs": "^2.0.8",
+    "jquery": "^1.9.1",
+    "popper.js": "^1.12.3",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
